# AIChat

./: Dockerfile  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
app/: chat_app.py  youtube_summary_app.py
