[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["GenkiKishikawa <gen-at86.battleship.930@docomo.ne.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.33.0"
langchain = "^0.1.17"
openai = "^1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
